Added logic for friendship